--- a/service-areas/northeast-indiana.html
+++ b/service-areas/northeast-indiana.html
@@ -1,142 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Site Selection in Northeast Indiana | Fort Wayne Location Intelligence | Urbivista</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-  <meta name="description" content="Urbivista provides defensible site selection and location intelligence across Northeast Indiana including Fort Wayne, New Haven, Auburn, Huntington, and surrounding communities." />
-  <link rel="canonical" href="https://www.urbivista.io/service-areas/northeast-indiana.html" />
-
-  <meta property="og:title" content="Site Selection in Northeast Indiana | Urbivista" />
-  <meta property="og:description" content="Defensible site selection and commercial real estate location intelligence across Fort Wayne and Northeast Indiana." />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://www.urbivista.io/service-areas/northeast-indiana.html" />
-
-  <link rel="stylesheet" href="../styles.css" />
-  <link rel="icon" href="../Urbivista_Logo_FullColor.png" />
-
-  <!-- Regional Service Schema -->
-  <script type="application/ld+json">
-  {
-    "@context":"https://schema.org",
-    "@type":"ProfessionalService",
-    "name":"Urbivista",
-    "url":"https://www.urbivista.io/",
-    "serviceType":["Site selection","Location intelligence","Commercial real estate site selection"],
-    "areaServed":[
-      {"@type":"City","name":"Fort Wayne","address":{"@type":"PostalAddress","addressRegion":"IN","addressCountry":"US"}},
-      {"@type":"AdministrativeArea","name":"Northeast Indiana","address":{"@type":"PostalAddress","addressRegion":"IN","addressCountry":"US"}}
-    ]
-  }
-  </script>
+<meta charset="UTF-8" />
+<title>Site Selection in Northeast Indiana | Urbivista</title>
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta name="description" content="Fort Wayne and Northeast Indiana site selection and commercial real estate location intelligence." />
+<link rel="canonical" href="https://www.urbivista.io/service-areas/northeast-indiana.html" />
+<link rel="stylesheet" href="../styles.css" />
+<link rel="icon" href="../Urbivista_Logo_FullColor.png" />
 </head>
 
 <body>
-  <header class="site-header">
-    <div class="container header-inner">
-      <a class="brand" href="../index.html" aria-label="Urbivista home">
-        <img class="brand-logo" src="../Urbivista_Logo_FullColor - Unstacked-1.png" alt="Urbivista logo" />
-      </a>
+<header class="site-header">
+<div class="container header-inner">
+<a class="brand" href="../index.html">
+<img class="brand-logo" src="../Urbivista_Logo_FullColor - Unstacked-1.png" />
+</a>
+</div>
+</header>
 
-      <nav class="nav">
-        <div class="nav-links" role="navigation" aria-label="Primary">
-          <a href="../index.html#platform">Platform</a>
-          <a href="../index.html#product">Product</a>
-          <a href="../index.html#solutions">Solutions</a>
-          <a href="../service-areas.html" class="active">Service Areas</a>
-          <a href="../blog.html">Blog</a>
-          <a class="btn btn-small" href="../index.html#contact">Contact</a>
-        </div>
-      </nav>
-    </div>
-  </header>
+<main class="section">
+<div class="container">
+<h1>Site Selection in Northeast Indiana</h1>
+<p class="muted">
+Fort Wayne, New Haven, Auburn, Columbia City, Huntington,
+Bluffton, Decatur, Warsaw, Kendallville, Angola.
+</p>
+<p><a href="../service-areas.html">← Back</a></p>
+</div>
+</main>
 
-  <main>
-    <section class="blog-hero">
-      <div class="container blog-hero-inner">
-        <div>
-          <p class="eyebrow">NORTHEAST INDIANA SERVICE AREA</p>
-          <h1>Site selection & location intelligence in Northeast Indiana</h1>
-          <p class="hero-sub">
-            Urbivista helps commercial real estate developers, franchise operators, and enterprise teams evaluate
-            sites across Fort Wayne and the surrounding Northeast Indiana region using defensible,
-            approval-ready location intelligence.
-          </p>
-        </div>
-
-        <div class="blog-hero-aside">
-          <div class="card">
-            <h3>Need a defensible framework?</h3>
-            <p class="muted">Start with a repeatable evaluation model that leadership can stand behind.</p>
-            <a class="btn btn-soft" href="../posts/defensible-location-intelligence-framework.html">
-              Read the framework
-            </a>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="section">
-      <div class="container" style="max-width: 980px;">
-        <h2>Primary Northeast Indiana Coverage</h2>
-        <p class="muted">
-          We commonly support projects in and around the Fort Wayne metropolitan area,
-          including both commercial development and enterprise real estate expansion.
-        </p>
-
-        <div class="grid-3 simple-cards">
-          <div class="card">
-            <h3>Fort Wayne</h3>
-            <p class="muted">Demand validation, access analysis, and site scoring for major retail and commercial corridors.</p>
-          </div>
-          <div class="card">
-            <h3>New Haven</h3>
-            <p class="muted">Growth-corridor evaluation and expansion strategy support.</p>
-          </div>
-          <div class="card">
-            <h3>Huntertown</h3>
-            <p class="muted">Suburban expansion feasibility and trade-area modeling.</p>
-          </div>
-        </div>
-
-        <h2 style="margin-top:28px;">Additional Communities We Support</h2>
-        <p class="muted">
-          Auburn, Huntington, Columbia City, Bluffton, Decatur, Kendallville,
-          Angola, Garrett, Warsaw, Wabash, and surrounding Northeast Indiana markets.
-        </p>
-
-        <div class="card subtle" style="margin-top:20px;">
-          <h3 style="margin-top:0;">Common Northeast Indiana Use Cases</h3>
-          <ul class="bullets">
-            <li>Retail corridor expansion analysis</li>
-            <li>Commercial real estate development feasibility</li>
-            <li>Franchise territory prioritization</li>
-            <li>Economic development recruitment support</li>
-            <li>Executive approval narratives and risk documentation</li>
-          </ul>
-        </div>
-
-        <p style="margin-top:24px;">
-          <a class="muted" href="../service-areas.html">← Back to Service Areas</a>
-        </p>
-      </div>
-    </section>
-  </main>
-
-  <footer class="footer">
-    <div class="container footer-inner">
-      <p class="muted">© <span id="year"></span> Urbivista. All rights reserved.</p>
-      <div class="footer-links">
-        <a href="../blog.html">Blog</a>
-        <a href="../index.html#contact">Contact</a>
-      </div>
-    </div>
-  </footer>
-
-  <script>
-    document.getElementById("year").textContent = new Date().getFullYear();
-  </script>
+<footer class="footer">
+<p class="muted">© <span id="year"></span> Urbivista</p>
+</footer>
+<script>document.getElementById("year").textContent=new Date().getFullYear();</script>
 </body>
 </html>
-
