--- a/service-areas/chicagoland-il.html
+++ b/service-areas/chicagoland-il.html
@@ -1,39 +1,190 @@
+<!-- =========================
+FILE: service-areas/chicagoland-il.html
+========================= -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<title>Site Selection in Chicagoland | Urbivista</title>
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<meta name="description" content="Defensible site selection across Chicago and surrounding suburbs including Naperville, Schaumburg, Evanston, Skokie, and more." />
-<link rel="canonical" href="https://www.urbivista.io/service-areas/chicagoland-il.html" />
-<link rel="stylesheet" href="../styles.css" />
-<link rel="icon" href="../Urbivista_Logo_FullColor.png" />
+  <meta charset="UTF-8" />
+  <title>Site Selection in Chicagoland | Chicago Suburbs Location Intelligence | Urbivista</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <meta name="description" content="Urbivista provides defensible site selection and location intelligence across Chicagoland—Chicago and the suburbs. Demand validation, access analysis, competitive context, and approval-ready narratives for developers and operators." />
+  <link rel="canonical" href="https://www.urbivista.io/service-areas/chicagoland-il.html" />
+
+  <meta property="og:title" content="Site Selection in Chicagoland | Urbivista" />
+  <meta property="og:description" content="Defensible site selection across Chicago and the suburbs—location intelligence, scenario modeling, and executive-ready reporting." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.urbivista.io/service-areas/chicagoland-il.html" />
+
+  <link rel="stylesheet" href="../styles.css" />
+  <link rel="icon" href="../Urbivista_Logo_FullColor.png" />
+
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"ProfessionalService",
+    "name":"Urbivista",
+    "url":"https://www.urbivista.io/",
+    "serviceType":[
+      "Site selection",
+      "Location intelligence",
+      "Commercial real estate site selection",
+      "Location analytics",
+      "Scenario modeling"
+    ],
+    "areaServed":[
+      {"@type":"City","name":"Chicago","address":{"@type":"PostalAddress","addressRegion":"IL","addressCountry":"US"}},
+      {"@type":"AdministrativeArea","name":"Chicagoland","address":{"@type":"PostalAddress","addressRegion":"IL","addressCountry":"US"}}
+    ]
+  }
+  </script>
 </head>
 
 <body>
-<header class="site-header">
-<div class="container header-inner">
-<a class="brand" href="../index.html">
-<img class="brand-logo" src="../Urbivista_Logo_FullColor - Unstacked-1.png" />
-</a>
-</div>
-</header>
+  <header class="site-header">
+    <div class="container header-inner">
+      <a class="brand" href="../index.html" aria-label="Urbivista home">
+        <img class="brand-logo" src="../Urbivista_Logo_FullColor - Unstacked-1.png" alt="Urbivista logo" />
+      </a>
 
-<main class="section">
-<div class="container">
-<h1>Site Selection in Chicagoland</h1>
-<p class="muted">
-Chicago, Naperville, Schaumburg, Evanston, Skokie, Oak Park,
-Des Plaines, Arlington Heights, Palatine, Lombard, Downers Grove,
-Orland Park, Tinley Park, Elmhurst, Wheaton, Glenview.
-</p>
-<p><a href="../service-areas.html">← Back</a></p>
-</div>
-</main>
+      <nav class="nav">
+        <div class="nav-links" role="navigation" aria-label="Primary">
+          <a href="../index.html#platform">Platform</a>
+          <a href="../index.html#product">Product</a>
+          <a href="../index.html#solutions">Solutions</a>
+          <a href="../service-areas.html" class="active">Service Areas</a>
+          <a href="../blog.html">Blog</a>
+          <a class="btn btn-small" href="../index.html#contact">Contact</a>
+        </div>
+      </nav>
+    </div>
+  </header>
 
-<footer class="footer">
-<p class="muted">© <span id="year"></span> Urbivista</p>
-</footer>
-<script>document.getElementById("year").textContent=new Date().getFullYear();</script>
+  <main>
+    <section class="blog-hero">
+      <div class="container blog-hero-inner">
+        <div>
+          <p class="ey provisioning">CHICAGOLAND SERVICE AREA</p>
+          <h1>Site selection & location intelligence in Chicagoland</h1>
+          <p class="hero-sub">
+            Urbivista supports developers, operators, and enterprise real estate teams across Chicago and the suburbs with
+            defensible, approval-ready location intelligence—site scoring, scenario modeling, and executive-ready narratives.
+          </p>
+        </div>
+
+        <div class="blog-hero-aside">
+          <div class="card">
+            <h3>Start with the framework</h3>
+            <p class="muted">Compare sites, document assumptions, and build decisions leadership can defend.</p>
+            <a class="btn btn-soft" href="../posts/defensible-location-intelligence-framework.html">Read the framework</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container">
+        <h2>Primary Chicagoland Coverage</h2>
+        <p class="muted">
+          We support site selection projects across Chicago and the surrounding metro. If you searched “site selection + [city]”,
+          this page confirms coverage and outlines how we build a defensible evaluation.
+        </p>
+
+        <div class="grid-3 simple-cards" style="margin-top:16px;">
+          <div class="card">
+            <h3>Chicago</h3>
+            <p class="muted">Expansion strategy, trade-area validation, and approval-ready narratives for urban constraints and competition.</p>
+          </div>
+          <div class="card">
+            <h3>North Shore</h3>
+            <p class="muted">Demand fit and access analysis across high-income corridors and dense retail nodes.</p>
+          </div>
+          <div class="card">
+            <h3>Suburban Corridors</h3>
+            <p class="muted">Retail feasibility and commercial development support across major commuter and retail corridors.</p>
+          </div>
+        </div>
+
+        <h2 style="margin-top:28px;">Cities & Sub-Regions We Commonly Support</h2>
+
+        <div class="card subtle" style="margin-top:14px;">
+          <h3 style="margin-top:0;">North Shore</h3>
+          <p class="muted" style="margin:0;">
+            Evanston · Wilmette · Winnetka · Glencoe · Highland Park · Lake Forest · Lake Bluff · Northbrook · Glenview
+          </p>
+        </div>
+
+        <div class="card subtle" style="margin-top:14px;">
+          <h3 style="margin-top:0;">Northwest Suburbs</h3>
+          <p class="muted" style="margin:0;">
+            Schaumburg · Hoffman Estates · Rolling Meadows · Palatine · Arlington Heights · Mount Prospect · Elk Grove Village ·
+            Des Plaines · Park Ridge · Niles · Skokie · Rosemont
+          </p>
+        </div>
+
+        <div class="card subtle" style="margin-top:14px;">
+          <h3 style="margin-top:0;">West Suburbs</h3>
+          <p class="muted" style="margin:0;">
+            Oak Park · River Forest · Cicero · Berwyn · Elmhurst · Oak Brook · Lombard · Downers Grove · Hinsdale · Naperville ·
+            Wheaton · Glen Ellyn
+          </p>
+        </div>
+
+        <div class="card subtle" style="margin-top:14px;">
+          <h3 style="margin-top:0;">Southwest Suburbs</h3>
+          <p class="muted" style="margin:0;">
+            Orland Park · Tinley Park · Frankfort · Mokena · New Lenox · Oak Lawn · Bridgeview · Bedford Park
+          </p>
+        </div>
+
+        <div class="card subtle" style="margin-top:14px;">
+          <h3 style="margin-top:0;">South Suburbs</h3>
+          <p class="muted" style="margin:0;">
+            Homewood · Flossmoor · Olympia Fields · Matteson · Calumet City · South Holland · Lansing · Harvey
+          </p>
+        </div>
+
+        <div class="card subtle" style="margin-top:22px;">
+          <h3 style="margin-top:0;">Common Chicagoland Use Cases</h3>
+          <ul class="bullets">
+            <li>Commercial real estate development feasibility</li>
+            <li>Retail expansion and corridor prioritization</li>
+            <li>Competitive context and cannibalization risk</li>
+            <li>Access, visibility, and site constraints analysis</li>
+            <li>Executive approval narratives and assumption documentation</li>
+          </ul>
+        </div>
+
+        <div class="card" style="margin-top:22px;">
+          <h3 style="margin-top:0;">Related reading</h3>
+          <p class="muted">
+            For a repeatable process, start with
+            <a href="../posts/defensible-location-intelligence-framework.html">defensible location intelligence</a>
+            and
+            <a href="../posts/site-selection-fails-at-assumptions.html">assumption tracking</a>.
+          </p>
+          <a class="btn btn-soft" href="../index.html#contact">Request a briefing</a>
+        </div>
+
+        <p style="margin-top:22px;">
+          <a class="muted" href="../service-areas.html">← Back to Service Areas</a>
+        </p>
+      </div>
+    </section>
+  </main>
+
+  <footer class="footer">
+    <div class="container footer-inner">
+      <p class="muted">© <span id="year"></span> Urbivista. All rights reserved.</p>
+      <div class="footer-links">
+        <a href="../blog.html">Blog</a>
+        <a href="../index.html#contact">Contact</a>
+      </div>
+    </div>
+  </footer>
+
+  <script>
+    document.getElementById("year").textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
