--- a/service-areas/northeast-indiana.html
+++ b/service-areas/northeast-indiana.html
@@ -1,38 +1,167 @@
+<!-- =========================
+FILE: service-areas/northeast-indiana.html
+========================= -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<title>Site Selection in Northeast Indiana | Urbivista</title>
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<meta name="description" content="Fort Wayne and Northeast Indiana site selection and commercial real estate location intelligence." />
-<link rel="canonical" href="https://www.urbivista.io/service-areas/northeast-indiana.html" />
-<link rel="stylesheet" href="../styles.css" />
-<link rel="icon" href="../Urbivista_Logo_FullColor.png" />
+  <meta charset="UTF-8" />
+  <title>Site Selection in Northeast Indiana | Fort Wayne Location Intelligence | Urbivista</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <meta name="description" content="Urbivista provides defensible site selection and location intelligence across Northeast Indiana including Fort Wayne, New Haven, Auburn, Huntington, and surrounding communities—approval-ready analysis for developers and operators." />
+  <link rel="canonical" href="https://www.urbivista.io/service-areas/northeast-indiana.html" />
+
+  <meta property="og:title" content="Site Selection in Northeast Indiana | Urbivista" />
+  <meta property="og:description" content="Defensible site selection and commercial real estate location intelligence across Fort Wayne and Northeast Indiana." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.urbivista.io/service-areas/northeast-indiana.html" />
+
+  <link rel="stylesheet" href="../styles.css" />
+  <link rel="icon" href="../Urbivista_Logo_FullColor.png" />
+
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"ProfessionalService",
+    "name":"Urbivista",
+    "url":"https://www.urbivista.io/",
+    "serviceType":[
+      "Site selection",
+      "Location intelligence",
+      "Commercial real estate site selection",
+      "Location analytics",
+      "Scenario modeling"
+    ],
+    "areaServed":[
+      {"@type":"City","name":"Fort Wayne","address":{"@type":"PostalAddress","addressRegion":"IN","addressCountry":"US"}},
+      {"@type":"AdministrativeArea","name":"Northeast Indiana","address":{"@type":"PostalAddress","addressRegion":"IN","addressCountry":"US"}}
+    ]
+  }
+  </script>
 </head>
 
 <body>
-<header class="site-header">
-<div class="container header-inner">
-<a class="brand" href="../index.html">
-<img class="brand-logo" src="../Urbivista_Logo_FullColor - Unstacked-1.png" />
-</a>
-</div>
-</header>
+  <header class="site-header">
+    <div class="container header-inner">
+      <a class="brand" href="../index.html" aria-label="Urbivista home">
+        <img class="brand-logo" src="../Urbivista_Logo_FullColor - Unstacked-1.png" alt="Urbivista logo" />
+      </a>
 
-<main class="section">
-<div class="container">
-<h1>Site Selection in Northeast Indiana</h1>
-<p class="muted">
-Fort Wayne, New Haven, Auburn, Columbia City, Huntington,
-Bluffton, Decatur, Warsaw, Kendallville, Angola.
-</p>
-<p><a href="../service-areas.html">← Back</a></p>
-</div>
-</main>
+      <nav class="nav">
+        <div class="nav-links" role="navigation" aria-label="Primary">
+          <a href="../index.html#platform">Platform</a>
+          <a href="../index.html#product">Product</a>
+          <a href="../index.html#solutions">Solutions</a>
+          <a href="../service-areas.html" class="active">Service Areas</a>
+          <a href="../blog.html">Blog</a>
+          <a class="btn btn-small" href="../index.html#contact">Contact</a>
+        </div>
+      </nav>
+    </div>
+  </header>
 
-<footer class="footer">
-<p class="muted">© <span id="year"></span> Urbivista</p>
-</footer>
-<script>document.getElementById("year").textContent=new Date().getFullYear();</script>
+  <main>
+    <section class="blog-hero">
+      <div class="container blog-hero-inner">
+        <div>
+          <p class="eyebrow">NORTHEAST INDIANA SERVICE AREA</p>
+          <h1>Site selection & location intelligence in Northeast Indiana</h1>
+          <p class="hero-sub">
+            Urbivista supports developers, franchise operators, and enterprise teams across Fort Wayne and surrounding Northeast Indiana
+            communities with defensible location intelligence—site scoring, scenario modeling, and executive-ready narratives.
+          </p>
+        </div>
+
+        <div class="blog-hero-aside">
+          <div class="card">
+            <h3>Need a defensible process?</h3>
+            <p class="muted">Reduce risk by documenting assumptions and stress-testing tradeoffs.</p>
+            <a class="btn btn-soft" href="../posts/defensible-location-intelligence-framework.html">Read the framework</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container">
+        <h2>Primary Northeast Indiana Coverage</h2>
+        <p class="muted">
+          We commonly support projects in the Fort Wayne metro and adjacent growth areas. Our work focuses on defensible evaluation:
+          demand fit, access and visibility, competitive context, feasibility, and approval-ready rationale.
+        </p>
+
+        <div class="grid-3 simple-cards" style="margin-top:16px;">
+          <div class="card">
+            <h3>Fort Wayne</h3>
+            <p class="muted">Retail corridor analysis, development feasibility, and executive decision narratives.</p>
+          </div>
+          <div class="card">
+            <h3>New Haven</h3>
+            <p class="muted">Growth area evaluation, site scoring, and trade-area validation.</p>
+          </div>
+          <div class="card">
+            <h3>Auburn</h3>
+            <p class="muted">Submarket evaluation and location strategy for expansion decisions.</p>
+          </div>
+        </div>
+
+        <h2 style="margin-top:28px;">Cities & Communities We Commonly Support</h2>
+
+        <div class="card subtle" style="margin-top:14px;">
+          <h3 style="margin-top:0;">Fort Wayne Metro + Adjacent Markets</h3>
+          <p class="muted" style="margin:0;">
+            Fort Wayne · New Haven · Huntertown · Leo-Cedarville · Woodburn · Auburn · Garrett
+          </p>
+        </div>
+
+        <div class="card subtle" style="margin-top:14px;">
+          <h3 style="margin-top:0;">Regional Northeast Indiana</h3>
+          <p class="muted" style="margin:0;">
+            Huntington · Columbia City · Bluffton · Decatur · Kendallville · Angola · Warsaw · Wabash
+          </p>
+        </div>
+
+        <div class="card subtle" style="margin-top:22px;">
+          <h3 style="margin-top:0;">Common Northeast Indiana Use Cases</h3>
+          <ul class="bullets">
+            <li>Commercial real estate feasibility studies</li>
+            <li>Retail expansion and corridor prioritization</li>
+            <li>Franchise territory planning and prioritization</li>
+            <li>Competitive context and cannibalization analysis</li>
+            <li>Executive approval narratives and assumption documentation</li>
+          </ul>
+        </div>
+
+        <div class="card" style="margin-top:22px;">
+          <h3 style="margin-top:0;">Related reading</h3>
+          <p class="muted">
+            For a repeatable approach, start with
+            <a href="../posts/defensible-location-intelligence-framework.html">defensible location intelligence</a>
+            and
+            <a href="../posts/site-selection-fails-at-assumptions.html">assumption tracking</a>.
+          </p>
+          <a class="btn btn-soft" href="../index.html#contact">Request a briefing</a>
+        </div>
+
+        <p style="margin-top:22px;">
+          <a class="muted" href="../service-areas.html">← Back to Service Areas</a>
+        </p>
+      </div>
+    </section>
+  </main>
+
+  <footer class="footer">
+    <div class="container footer-inner">
+      <p class="muted">© <span id="year"></span> Urbivista. All rights reserved.</p>
+      <div class="footer-links">
+        <a href="../blog.html">Blog</a>
+        <a href="../index.html#contact">Contact</a>
+      </div>
+    </div>
+  </footer>
+
+  <script>
+    document.getElementById("year").textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
