--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
   <title>Urbivista | Enterprise Location Intelligence for Defensible Site Selection</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <meta name="description" content="Urbivista helps enterprise teams and commercial real estate stakeholders evaluate locations with defensible, audit-ready location intelligence—site scoring, scenario modeling, and executive-ready reporting." />
+  <meta
+    name="description"
+    content="Urbivista helps enterprise teams and commercial real estate stakeholders evaluate locations with defensible, audit ready location intelligence, including site scoring, scenario modeling, and executive ready reporting."
+  />
   <link rel="canonical" href="https://www.urbivista.io/" />
 
   <meta property="og:title" content="Urbivista | Defensible Location Intelligence" />
-  <meta property="og:description" content="Evaluate locations with defensible, audit-ready insight. Data-backed scoring, scenario modeling, and executive-ready reporting." />
+  <meta
+    property="og:description"
+    content="Evaluate locations with defensible, audit ready insight. Data backed scoring, scenario modeling, and executive ready reporting."
+  />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.urbivista.io/" />
 
@@ -23,7 +29,7 @@
     "@type": "Organization",
     "name": "Urbivista",
     "url": "https://www.urbivista.io/",
-    "logo": "https://www.urbivista.io/Urbivista_Logo_FullColor%20-%20Unstacked-1.png",
+    "logo": "https://www.urbivista.io/Urbivista_Logo_FullColor%20Unstacked%201.png",
     "sameAs": []
   }
   </script>
@@ -43,7 +49,7 @@
   }
   </script>
 
-  <!-- Service + area served schema (NWI + NE Chicagoland) -->
+  <!-- Service and area served schema -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -90,7 +96,7 @@
   <header class="site-header">
     <div class="container header-inner">
       <a class="brand" href="index.html" aria-label="Urbivista home">
-        <img class="brand-logo" src="Urbivista_Logo_FullColor - Unstacked-1.png" alt="Urbivista logo" />
+        <img class="brand-logo" src="Urbivista_Logo_FullColor Unstacked 1.png" alt="Urbivista logo" />
       </a>
 
       <nav class="nav">
@@ -131,7 +137,7 @@
           <h1>Smarter site selection through <span class="accent">defensible</span> insight</h1>
           <p class="hero-sub">
             Urbivista helps enterprise teams evaluate locations with clarity, confidence, and repeatable,
-            data-driven decisioning—built for executive approvals and audit-ready rationale.
+            data driven decisioning, built for executive approvals and audit ready rationale.
           </p>
 
           <div class="cta-row">
@@ -153,9 +159,9 @@
               Make confident calls with clear tradeoffs and documentation leaders can stand behind.
             </p>
             <ul class="checklist">
-              <li>Data-backed site scoring & tradeoffs</li>
+              <li>Data backed site scoring and tradeoffs</li>
               <li>Scenario modeling before capital is deployed</li>
-              <li>Executive-ready reporting & documentation</li>
+              <li>Executive ready reporting and documentation</li>
             </ul>
             <a class="btn btn-soft" href="#contact">Get a demo</a>
           </div>
@@ -177,7 +183,7 @@
                 <span class="tag">Data layer</span>
               </div>
               <p class="muted">
-                Compare sites using normalized metrics—demographics, demand signals, and strategic fit.
+                Compare sites using normalized metrics, demographics, demand signals, and strategic fit.
               </p>
             </div>
             <img class="feature-img" src="location-intelligence.png" alt="Location intelligence dashboard preview" />
@@ -190,7 +196,7 @@
                 <span class="tag">Forecasting</span>
               </div>
               <p class="muted">
-                Stress-test assumptions and see how tradeoffs affect performance before you commit.
+                Stress test assumptions and see how tradeoffs affect performance before you commit.
               </p>
             </div>
             <img class="feature-img" src="scenario-modeling.png" alt="Scenario modeling preview" />
@@ -200,10 +206,10 @@
             <div class="feature-content">
               <div class="feature-top">
                 <h3>Enterprise Reporting</h3>
-                <span class="tag">Approval-ready</span>
+                <span class="tag">Approval ready</span>
               </div>
               <p class="muted">
-                Generate executive-ready outputs with clear rationale, assumptions, and audit trails.
+                Generate executive ready outputs with clear rationale, assumptions, and audit trails.
               </p>
             </div>
             <img class="feature-img" src="platform-dashboard.png" alt="Platform reporting dashboard preview" />
@@ -220,7 +226,7 @@
 
         <div class="grid-2">
           <div class="card">
-            <h3>Score & rank sites</h3>
+            <h3>Score and rank sites</h3>
             <p class="muted">Define your model, weight what matters, and compare options with clear tradeoffs.</p>
             <ul class="bullets">
               <li>Custom scoring models</li>
@@ -235,7 +241,7 @@
             <ul class="bullets">
               <li>Assumption tracking</li>
               <li>Decision logs</li>
-              <li>Audit-ready outputs</li>
+              <li>Audit ready outputs</li>
             </ul>
           </div>
         </div>
@@ -254,7 +260,7 @@
 
         <div class="grid-3 simple-cards">
           <div class="card">
-            <h3>Retail & Franchise</h3>
+            <h3>Retail and Franchise</h3>
             <p class="muted">Prioritize growth markets and validate trade areas with consistent scoring.</p>
           </div>
           <div class="card">
@@ -269,25 +275,31 @@
       </div>
     </section>
 
-    <!-- SEO + Local Coverage -->
+    <!-- SEO and Local Coverage -->
     <section class="section section-alt">
       <div class="container">
-        <h2>Site Selection in Northwest Indiana & Northeast Chicagoland</h2>
+        <h2>Site Selection in Northwest Indiana and Northeast Chicagoland</h2>
         <p class="section-sub">
-          We support defensible site selection and location intelligence across Northwest Indiana—Valparaiso, Merrillville,
+          We support defensible site selection and location intelligence across Northwest Indiana, including Valparaiso, Merrillville,
           Michigan City, Crown Point, Hammond, Gary, Schererville, Munster, Highland, Dyer, St. John, Portage, Chesterton,
-          Hobart, La Porte—and the Northeast Chicago suburbs.
+          Hobart, La Porte, and the Northeast Chicago suburbs.
         </p>
 
         <div class="card subtle">
           <p class="muted" style="margin:0;">
             Explore regional coverage:
-            <a href="service-areas.html">Service Areas</a> ·
-            <a href="service-areas/site-selection-valparaiso-in.html">Valparaiso</a> ·
-            <a href="service-areas/site-selection-merrillville-in.html">Merrillville</a> ·
-            <a href="service-areas/site-selection-michigan-city-in.html">Michigan City</a> ·
-            <a href="service-areas/site-selection-crown-point-in.html">Crown Point</a> ·
-            <a href="service-areas/site-selection-hammond-in.html">Hammond</a> ·
+            <a href="service-areas.html">Service Areas</a>
+            <span aria-hidden="true"> • </span>
+            <a href="service-areas/site-selection-valparaiso-in.html">Valparaiso</a>
+            <span aria-hidden="true"> • </span>
+            <a href="service-areas/site-selection-merrillville-in.html">Merrillville</a>
+            <span aria-hidden="true"> • </span>
+            <a href="service-areas/site-selection-michigan-city-in.html">Michigan City</a>
+            <span aria-hidden="true"> • </span>
+            <a href="service-areas/site-selection-crown-point-in.html">Crown Point</a>
+            <span aria-hidden="true"> • </span>
+            <a href="service-areas/site-selection-hammond-in.html">Hammond</a>
+            <span aria-hidden="true"> • </span>
             <a href="service-areas/site-selection-chicago-il.html">Chicago</a>
           </p>
         </div>
@@ -329,7 +341,7 @@
     function setMenu(open) {
       toggle.setAttribute("aria-expanded", open ? "true" : "false");
       mobileMenu.hidden = !open;
-      document.body.classList.toggle("menu-open", open);
+      document.body.classList.toggle("menu_open", open);
     }
 
     toggle.addEventListener("click", () => {
